[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/characters/player/test.png" type="Texture" id=1]
[ext_resource path="res://entities/characters/player/player.gd" type="Script" id=2]
[ext_resource path="res://entities/characters/player/state.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 8.0

[sub_resource type="CircleShape2D" id=20]
radius = 9.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 10 )
animation = "idle"

[node name="Arch" type="Node2D" parent="."]
position = Vector2( -2, 2 )

[node name="Sprite" type="Sprite" parent="Arch"]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="position_attack" type="Position2D" parent="Arch"]
position = Vector2( 8, 0 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 19 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 360
editor_draw_screen = false

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="State" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="Collider" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 20 )

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
